--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       justify-content: center;
       align-items: center;
       height: 100vh;
+      background-color: hsl(30, 38%, 92%);
     }
     .cont {
       width: 350px;
@@ -34,7 +35,7 @@
       grid-template-rows: 40px repeat(6, auto);
       justify-content: start;
       justify-items: start;
-      background-color: hsl(30, 38%, 92%);
+      background-color: white;
       gap: 0 20px;
       border-radius: 2%;
     }
