--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       margin: 0 auto;
       text-align: start;
       display: grid;
-      grid-template-columns: repeat(2, 166);
+      grid-template-columns: repeat(2, 166px);
       grid-template-rows: 40px repeat(6, auto);
       justify-content: start;
       justify-items: start;
