--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 100vh;
+      min-height: 100vh;
       background-color: hsl(30, 38%, 92%);
     }
     .cont {
@@ -32,7 +32,7 @@
       text-align: start;
       display: grid;
       grid-template-columns: repeat(2, 166px);
-      grid-template-rows: 40px repeat(6, auto);
+      grid-template-rows: 40px repeat(3, auto);
       justify-content: start;
       justify-items: start;
       background-color: white;
@@ -44,9 +44,9 @@
       height: 250px;
       grid-area: 1 / 1 / 6 / 1;
       justify-items: start;
-      border-radius: 2% 0 0 2%;
+      border-radius: 3% 0 0 3%;
     }
-    .pre {
+    header {
       text-transform: uppercase;
       letter-spacing: 4px;
       margin: 20px 0 0 0;
@@ -57,65 +57,82 @@
       opacity: 0.5;
       margin-left: -1px;
     }
+    main  {
+      margin-bottom: 15px;
+      font-size: 20px;
+    }
     h1  {
       width: 115px;
       height: 60px;
-      font-size: 20px;
+      font-size: 1em;
       overflow-wrap: break-word;
       line-height: 20px;
+      margin-bottom: 10px;
     }
     p {
-      font-size: 10px;
+      font-size: .5em;
       width: 150px;
       height: 50px;
       overflow-wrap: break-word;
       line-height: 13px;
       opacity: .6;
       font-family: Arial, Helvetica, sans-serif;
+      margin-bottom: 10px;
     }
     .price  {
+      width: 130px;
       font-family: "Fraunces";
       display: flex;
       justify-content: space-between;
       align-items: flex-start;
-      gap: 10px;
+      margin-bottom: 10px;
+      font-size: 10px
     }
     .price div:first-child  {
       color: hsl(158, 36%, 37%);
+      font-size: 2em;
     }
     .price div:last-child {
-      font-size: 8px;
-      opacity: 0.5;
-      align-self: flex-start;
+      font-size: 1em;
+      opacity: 0.4;
+      align-self: center;
       line-height: 20px;
       text-decoration: line-through;
+      margin-top: 1px;
     }
 
-    .add  {
+    button  {
       width: 130px;
       height: fit-content;
       color: white;
       font-family: Arial, Helvetica, sans-serif;
-      font-size: 8px;
-      font-weight: bold;
+      font-size: .4em;
       text-align: center;
       background-color: hsl(158, 36%, 37%);
       border-radius: 5px;
-      padding: 8px;
+      padding: 5px;
       position: relative;
+      border-color: transparent;
+      margin-bottom: 10px;
+      display: flex;
+      justify-content: center;
+    }
+    button span:first-of-type {
+      font-weight: bold;
+      
     }
     svg {
-      font-size: 5px;
+      font-size: .3em;
       display: inline;
       width: 10px;
       height: 10px;
       color: white;
+      margin-right: 5px;
     }
-    .add:hover  {
+    button:hover  {
       background-color: hsl(158, 36%, 18%);
-      cursor: pointer;
     }
-    .attribution  {
+    footer  {
       grid-area: 6 / 1 / 7 / 3;
       margin-top: 5px;
     }
@@ -130,11 +147,11 @@
       }
       .cont {
         width: 225px;
-        height: 450px;
+        height: 395px;
         display: grid;
         grid-template-columns: auto;
-        grid-template-rows: 160px repeat(5, auto);
-        border-radius: 2%;
+        grid-template-rows: 160px repeat(2, auto);
+        border-radius: 3%;
         overflow-wrap: break-word;
         position: relative;
       }
@@ -146,38 +163,48 @@
         width: 225px;
         height: 160px;
         grid-area: 1 / 1 / 2 / 1;
-        border-top-left-radius: 2%;
-        border-top-right-radius: 2%;
+        border-top-left-radius: 3%;
+        border-top-right-radius: 3%;
       }
-      .pre  {
+      header  {
         grid-area: 2 / 1 / 3 / 1;
       }
+      main  {
+        margin-bottom: 0;
+      }
       h1 {
+        width: 180px;
+        height: fit-content;
         grid-area: 3 / 1 / 4 / 1;
+        margin-bottom: 15px;
       }
       p {
+        width: 170px;
         grid-area: 4 / 1 / 5 / 1;
+        margin-bottom: 15px;
       }
       .price  {
         grid-area: 5 / 1 / 6 / 1;
+        margin-bottom: 10px;
       }
-      .add  {
+      button  {
+        width: 150px;
         grid-area: 6 / 1 / 7 / 1;
       }
-      .attribution  {
+      footer  {
         display: block;
         align-self: flex-end;
         position: absolute;
         left: -20px;
-        top: 50px;
+        top: 100%;
       }
-      .pre,
+      header,
       h1,
       p,
       .price,
-      .add,
-      .attribution  {
-        margin-left: 20px;
+      button,
+      footer  {
+        margin-left: 30px;
       }
     }
   </style>
@@ -186,22 +213,24 @@
   <div class="cont">
     <img src="./images/image-product-mobile.jpg" alt="perfume" class="img-mob">
     <img src="./images/image-product-desktop.jpg" alt="perfume" class="img-desk">
-    <div class="pre">Prefume</div>
-    <h1>Gabrielle Essence Eau De Parfum</h1>
-    <p>A floral, solar and voluptuous interpretation composed by Olivier Polge, 
-    Perfumer-Creator for the House of CHANEL.</p>
-    <div class="price">
-      <div>$149.99</div>
-      <div>$169.99</div>
-    </div>
-      <div class="add">
-      <svg width="15" height="16" xmlns="http://www.w3.org/2000/svg"><path d="M14.383 10.388a2.397 2.397 0 0 0-1.518-2.222l1.494-5.593a.8.8 0 0 0-.144-.695.8.8 0 0 0-.631-.28H2.637L2.373.591A.8.8 0 0 0 1.598 0H0v1.598h.983l1.982 7.4a.8.8 0 0 0 .799.59h8.222a.8.8 0 0 1 0 1.599H1.598a.8.8 0 1 0 0 1.598h.943a2.397 2.397 0 1 0 4.507 0h1.885a2.397 2.397 0 1 0 4.331-.376 2.397 2.397 0 0 0 1.12-2.021ZM11.26 7.99H4.395L3.068 3.196h9.477L11.26 7.991Zm-6.465 6.392a.8.8 0 1 1 0-1.598.8.8 0 0 1 0 1.598Zm6.393 0a.8.8 0 1 1 0-1.598.8.8 0 0 1 0 1.598Z" fill="#FFF"/></svg>
-      Add to Cart
+    <header>Prefume</header>
+    <main>
+      <h1>Gabrielle Essence Eau De Parfum</h1>
+      <p>A floral, solar and voluptuous interpretation composed by Olivier Polge, 
+      Perfumer-Creator for the House of CHANEL.</p>
+      <div class="price">
+        <div>$149.99</div>
+        <div>$169.99</div>
       </div>
-      <div class="attribution">
-        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-        Coded by <a href="#">Zakarea-najjar</a>.
-      </div>    
+      <button>
+        <svg width="15" height="16" xmlns="http://www.w3.org/2000/svg"><path d="M14.383 10.388a2.397 2.397 0 0 0-1.518-2.222l1.494-5.593a.8.8 0 0 0-.144-.695.8.8 0 0 0-.631-.28H2.637L2.373.591A.8.8 0 0 0 1.598 0H0v1.598h.983l1.982 7.4a.8.8 0 0 0 .799.59h8.222a.8.8 0 0 1 0 1.599H1.598a.8.8 0 1 0 0 1.598h.943a2.397 2.397 0 1 0 4.507 0h1.885a2.397 2.397 0 1 0 4.331-.376 2.397 2.397 0 0 0 1.12-2.021ZM11.26 7.99H4.395L3.068 3.196h9.477L11.26 7.991Zm-6.465 6.392a.8.8 0 1 1 0-1.598.8.8 0 0 1 0 1.598Zm6.393 0a.8.8 0 1 1 0-1.598.8.8 0 0 1 0 1.598Z" fill="#FFF"/></svg>
+        <span>Add to Cart</span>
+        </button>    
+    </main>
+    <footer>
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="#">Zakarea-najjar</a>.
+    </footer>    
   </div>
 </body>
 </html>
